tests/syntax_tests/data/parsing/errors/structure/recordFieldKeywordInType2.res
type r = {
  id: string,
  type: int,
  x: bool,
}
